--- a/styles.css
+++ b/styles.css
@@ -30,91 +30,6 @@ h1:hover{
     text-shadow: 0 2px 10px rgba(255, 255, 255,1);
     transition: 0.25s;
 }
-
-
-body{
-    background-color: floralwhite;
-    background-image: url(./background.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-}
-
-.top-wall{
-
-    text-align: center;
-    font-size: 40px;
-    font-weight: bold;
-
-}
-.images{
-
-
-    width: 400px;
-    height: 300px;
-    margin-left: 80px;
-    margin-right: 80px;
-    border-radius: 5px;
-
-
-}
-.images:hover{
-
-    transition: 0.25s;
-    box-shadow: 0 2px 20px rgba(0,0, 0, 0.7);
-
-}
-
-.navigation {
-            
-    font-size: 30px;
-    font-weight: bold;
-    padding-left: 20px;
-    padding-right: 60px;
-    padding-bottom: 15px;
-            
-}
-
-.bottom {
-
-
-    background-color: black;
-    text-align: left;
-    color: white;
-    height: 160px;
-    font-size: 20px;
-    padding:10px;
-            
-}
-.rows{
-    text-align: center;
-    width: 100%;
-    margin-left: auto;
-    margin-right: auto;
-    padding-bottom: 10px;
-    padding-top: 15px;
-}
-.col1{
-    float: left;
-}
-.col2{
-    display: inline-block;
-}
-.col3{
-    float: right;
-}
-
-.links{
-    color: black;
-    text-decoration: none;
-    font-size: 25px;
-            
-
-}
-.links:hover{
-    text-decoration: underline;
-    text-shadow: 0 2px 10px rgba(0,0, 0, 0.5);
-}
-       
 .nav-item{
     float: right;
     text-decoration: none;
@@ -125,6 +40,9 @@ body{
     font-size: 25px;
            
 }
+.menu-item{
+    list-style: none;
+}
 .nav-item:hover{
     text-decoration: underline;
     text-shadow: 0 2px 10px rgb(255, 255, 255);
@@ -134,12 +52,122 @@ body{
     position: sticky;
     top: 0;
 }
+
+.top-wall{
+    
+    text-align: center;
+    font-size: 40px;
+    font-weight: bold;
+    
+}
+
+
+body{
+    background-color: floralwhite;
+    background-image: url(./background.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+#top-wallimage {
+    width: 100%;
+    height: 79vh;
+    margin: 0;
+    padding-top: 0;
+    padding-bottom: 0;
+           
+
+}
+
+
+#Welcome-text{
+    padding-top: 20px;
+    padding-bottom: 30px;
+}
+
+
+.images{
+    
+    
+    width: 400px;
+    height: 300px;
+    margin-left: 3vw;
+    margin-right: 3vw;
+    border-radius: 5px;
+
+}
+
+
+.images:hover{
+
+    transition: 0.25s;
+    box-shadow: 0 2px 20px rgba(0,0, 0, 0.7);
+
+}
+
+
+.rows{
+    text-align: center;
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+    padding-bottom: 10px;
+    padding-top: 15px;
+}
+
+
+.col1{
+    float: left;
+}
+
+
+.col2{
+    display: inline-block;
+}
+
+
+.col3{
+    float: right;
+}
+
+
+
+.links{
+    color: black;
+    text-decoration: none;
+    font-size: 25px;
+            
+
+}
+
+
+.links:hover{
+    text-decoration: underline;
+    text-shadow: 0 2px 10px rgba(0,0, 0, 0.5);
+}
+
+
+.bottom {
+
+    background-color: black;
+    text-align: left;
+    color: white;
+    height: 15%;
+    font-size: 20px;
+    padding:10px;
+    position: relative;
+    bottom: 0;
+            
+}
+
+
 .bottom ul{
     list-style: none;
     text-align: center;
     position: relative;
     top: 20%;
 }
+
+
 .bottom ul li{
     width: 75px;
     height: 75px;
@@ -151,82 +179,93 @@ body{
     border: none solid #D8E2DC;
     display: inline-block;
     transition: all 0.5s ease;
-    
-
 }
+
 
 .bottom ul li .fa {
     color: #D8E2DC;
     margin-top: 20px;
     transition: all 0.5s ease;
-          }
+}
+
+
 .bottom ul li:hover.facebook {
-    /* border: none solid #3b5998;
-    box-shadow: 0 0 15px #3b5998; */
     transition: all 0.5s ease;
 }
+
+
 .bottom ul li:hover .fa-facebook {
     color: #5173bd;
     text-shadow: 0 0 15px #5173bd;
     transition: all 0.5s ease;
 }
+
+
 .bottom ul li:hover.instagram {
-    /* border: none solid rgb(255, 50, 176);
-    box-shadow: 0 0 15px rgb(255, 50, 176); */
     transition: all 0.5s ease;
 }
+
 
 .bottom ul li:hover .fa-instagram {
     color: rgb(255, 50, 176);
     text-shadow: 0 0 15px rgb(255, 50, 176);
     transition: all 0.5s ease;
 }
+
+
 .bottom ul li:hover.github {
-    /* border: none solid rgb(8, 230, 8); */
-    /* box-shadow: 0 0 15px rgb(8, 230, 8); */
     transition: all 0.5s ease;
 }
+
+
 
 .bottom ul li:hover .fa-github {
     color:rgb(28, 245, 28);
     text-shadow: 0 0 15px rgb(28, 245, 28);
     transition: all 0.5s ease;
 }
+
+
 .bottom ul li:hover.linkedin {
     
     transition: all 0.5s ease;
 }
+
 
 .bottom ul li:hover .fa-linkedin {
     color:rgb(51, 51, 248);
     text-shadow: 0 0 15px rgb(51, 51, 247);
     transition: all 0.5s ease;
 }
+
+
 #bottom-text{
+    text-align: right;    
+}
 
-    text-align: right;
+
+@media screen and (max-width: 1024px) {
     
-}
-
-#top-wallimage {
-    width: 100%;
-    height: 79vh;
-    margin: 0;
-    padding-top: 0;
-    padding-bottom: 0;
-           
-
-}
-#Welcome-text{
-    padding-top: 20px;
-    padding-bottom: 30px;
-}
-@media screen and (max-width:1024px) {
-    header{
+        header{
         width: 100%;
-        font-size: 70%;
+        font-size: 75%;
         padding: 0;
         margin: 0;
+        
+    }
+    
+    #toplogo{
+        font-size: 150%;
+    }
+    .menu-item{
+        position: fixed;
+        top:5%;
+        right: 0;
+        height: 100vh;
+        width: 50vw;
+        max-height: 100vh;
+        background-color: black;
+        
     }
     .col1{
         float: none;
@@ -243,10 +282,10 @@ body{
         text-align: center;
         width: 100%;
     }
-        
     .nav-item{
-        font-size: 100%;
-        padding: 4px; 
+        font-size: 150%;
+        padding-left:40% ; 
+        width: 100%;   
     }
     .top-wall{
         width: 100%;
@@ -272,6 +311,7 @@ body{
     h1{
         position: relative;
         top: 11%;
+        margin-top: 1%
     }
     .links{
         font-size: 100%;
@@ -281,5 +321,37 @@ body{
         height:59vh;
         width: 100%;
     }
+    .menu-item{
+		display: none;
+	}
+	.menu-item.hamburger{
+		display: block;
+        
+	}
+    .hamIcon{
+        float:right;
+        padding-right: 1.8%;
+        font-size: 120%;
+    }
     
+}
+
+
+@media (min-width: 1025px){
+	.menu-item{
+		display: initial;
+	}
+
+	#toggle-bar{
+		display: none;
+	}
+    .images{
+        padding: 0;
+        margin: 3%;
+        width: 25vw;
+        margin-left: 3vw;
+        margin-right: 3vw;
+    
+    }
+
 }
